Archive2/56/6837f94eb6baf8/output
main.cpp:13:34: error: call to non-static member function without an object argument
    static void badbar() { Base::badfoo(); }  // compiles ok
                           ~~~~~~^~~~~~
1 error generated.
